--- a/h2/style.css
+++ b/h2/style.css
@@ -40,6 +40,7 @@ table {
     border-radius: 10px;
 }
 table:hover{
+    transition: 1s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
     background-color: white;
 }
@@ -85,6 +86,10 @@ img{
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.konten4 .ik4 .bt:hover{
+    transition: 0.5s;
+    background-color: rgb(255, 246, 164);
+}
 .konten6{
     background-color: #3f3f3f;
     padding-top: 90px;
@@ -93,11 +98,15 @@ img{
 .kotak{
     margin-top: 100px;
 }
-.bt{
+.btn{
     margin-top: 50px;
     width: 180px;
     border-radius: 5px;
     padding-top: 20px;
     padding-bottom: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
+}
+.btn:hover{
+    transition: 0.5s;
+    background-color: #ffffff;
 }
